<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/maps"/>
        <item
            android:id="@+id/nav_openGl"
            android:icon="@drawable/ic_menu_opengl"
            android:title="@string/opengl"/>
        <item
            android:id="@+id/nav_tab_host"
            android:icon="@drawable/ic_menu_tabs"
            android:title="@string/tabs"/>
    </group>

    <item android:title="@string/get_social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about_us"/>
        </menu>
    </item>
</menu>
